--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 @import url(./blocks/element/__counter/element__counter.css);
 @import url(./blocks/element/__column/element__column.css);
 @import url(./blocks/element/__remove/element__remove.css);
+@import url(./blocks/element/__remove/_visible/element__remove_visible.css);
 @import url(./blocks/element/__image/element__image.css);
 @import url(./blocks/element/__name/element__name.css);
 @import url(./blocks/element/__group/element__group.css);
